Fix text align bug

--- a/src/components/room/chat/bubbles.css
+++ b/src/components/room/chat/bubbles.css
@@ -218,7 +218,7 @@
 
 .andMore {
 	font-size: 75%;
-	margin-left: 3rem;
+	margin-left: 3.25rem;
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
 	cursor: pointer;
